Avoid overflow from long release names

--- a/app/assets/stylesheets/modules/collections/releases.scss
+++ b/app/assets/stylesheets/modules/collections/releases.scss
@@ -2,6 +2,7 @@
   ul li {
     position: relative;
     padding-right: ($gridColumnWidth * 1.25 + 1) * 3;
+    overflow: hidden;
   }
   
   img {
